<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_retrieval"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PlayBackActivity">

    <include layout="@layout/activity_topbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/retrieval_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <SurfaceView
                        android:id="@+id/pb_surfaceview1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/colorhalfwhite">

                        <TextView
                            android:id="@+id/pb_channel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="1"
                            android:textColor="@color/colorWhite" />
                    </FrameLayout>
                </FrameLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:visibility="gone" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <SurfaceView
                        android:id="@+id/pb_surfaceview2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/colorhalfwhite">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="2"
                            android:textColor="@color/colorWhite" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/pb_bg_surf2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/surfaceview_bg"
                        android:visibility="gone"></FrameLayout>
                </FrameLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <SurfaceView
                        android:id="@+id/pb_surfaceview3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/colorhalfwhite">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="3"
                            android:textColor="@color/colorWhite" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/pb_bg_surf3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/surfaceview_bg"
                        android:visibility="gone"></FrameLayout>
                </FrameLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:visibility="gone" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <SurfaceView
                        android:id="@+id/pb_surfaceview4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/colorhalfwhite">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="4"
                            android:textColor="@color/colorWhite" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/pb_bg_surf4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/surfaceview_bg"
                        android:visibility="gone"></FrameLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/retrieval_lny_controll"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/retrieval_linearLayout"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/pb_seekbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/retrieval_lny_controll"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_speedword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="speed" />

                <TextView
                    android:id="@+id/tv_plyback_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tv_speedword"
                    android:text="x1" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_playback_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:gravity="right"
                    android:text="00:00:00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="/" />

                <TextView
                    android:id="@+id/tv_playback_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:text="09:50:00" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/retrieval_lny_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/linear"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/pb_btn_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/action_play" />

            <Button
                android:id="@+id/pb_btn_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/action_stop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/retrieval_lny_button"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/pb_btn_closevoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/action_close_voice" />

            <Button
                android:id="@+id/pb_btn_faster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/action_fast" />

            <Button
                android:id="@+id/pb_btn_slower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/action_slow" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
